Updated js website for medp15000
Professor had no involvement in the code written. Added navigation bar, and hw 2

--- a/Media15000/hw3.html
+++ b/Media15000/hw3.html
@@ -8,7 +8,7 @@
 		<meta name="description" lang="en" content="WRITE A DESCRIPTION" />
 		<meta name="keywords" content="DEFINE KEYWORDS OR PHRASES, USE COMMAS TO SEPERATE" />
 
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="./style3.css">
 		<script type="text/javascript" src="./scripts.js"></script>
 
 		<script>
@@ -52,14 +52,11 @@
 		<audio id="music" src="sounds/backgroundMusic.mp3" controls></audio>
 
 		<div class="text">
-			<h1>Howard Jiang</h1>
-			<h2>Welcome to my html web page.</h2>
-			<h3>Junior year small brain computer science guy doing code because why not.</h3>
-			<div>Help, my french fries are getting cold in class and I cant eat them. Press F to pay respects.</div> 
-			<p>If you actually didnt try pressing the F key, here is a link to it instead. 
-				<a href="index2.html">Link me to the game</a>
-			</p>
-			<img id="gif" src="images/gifPicture.gif" />
+			<h1>Howard Jiang Homework 3</h1>
+			<!-- <img id="gif" src="images/gifPicture.gif" /> -->
+
+			<h2 id = "pictureText">Before Image </h2>
+			<img id = 'pic' src="images/hw2 images/hw2large.png" onclick="changePicture2('pic', 'hw2largeblurred', '.png', 'pictureText')">
 		</div>		
 	</body>
 </html>
