--- a/Media15000/hw2.html
+++ b/Media15000/hw2.html
@@ -56,8 +56,9 @@
 			<!-- <img id="gif" src="images/gifPicture.gif" /> -->
 
 			<h2 id = "pictureText">These images are 1920px by 1080px at 300ppi </h2>
-			<img id = "pic" src="images/hw2 images/hw2large.png" onclick="changePicture('pic', 'hw2medium', '.png', 'pictureText')">
-			<img id = "pic2" src="images/hw2 images/hw2large2.png" onclick="changePicture('pic2','hw2medium2', '.png', 'pictureText')">
+			<img id = "pic" src="images/hw2 images/hw2large.png" onclick="changePicture('pic','images/hw2 images/', 'hw2medium', '.png', 'pictureText', 'These images are 800px by 800px.')">
+			<img id = "pic2" src="images/hw2 images/hw2large2.png" onclick="changePicture('pic2','images/hw2 images/', 'hw2medium2', '.png', 'pictureText','These images are 800px by 800px.')">
+			<h2>Difference between clarity, vibrance, saturation sliders in Adobe Camera Raw, and how shadows/blacks sliders function.</h2>
 		</div>		
 	</body>
 </html>
