--- a/Media15000/hw3.html
+++ b/Media15000/hw3.html
@@ -55,8 +55,20 @@
 			<h1>Howard Jiang Homework 3</h1>
 			<!-- <img id="gif" src="images/gifPicture.gif" /> -->
 
-			<h2 id = "pictureText">Before Image </h2>
-			<img id = 'pic' src="images/hw2 images/hw2large.png" onclick="changePicture2('pic', 'hw2largeblurred', '.png', 'pictureText')">
-		</div>		
+			<h2 id = "pictureText">Original Image</h2>
+			<img id = 'pic' src="images/hw2 images/hw2large.png" onclick="changePicture('pic','images/hw2 images/', 'hw2largeblurred', '.png', 'pictureText', 'This is the blurred image')">
+		</div>	
+		
+		<div>
+			Clarity specifically targets the midtones and specific regions/portion sof the image rather than the entire image.<br />
+			Vibrance pertains to the "intensity" on a portion of an image. A green image with vibrance -100 looks similar to a black and white image, 
+				but in actuality it changes the brightness. <br />
+			Saturation is similar to vibrance except for the fact that it globally affects the image. That just means all the saturated colors in the image will be affected. <br />
+
+			Shadows: Shadows works as an extra layer where you click the layer style icon which is the fx button on the bottom of the layers window. 
+				Shadows is an effect where duplicate images are repeated behind the original one, creating an animorphs book cover like effect. 
+			Sliders: They are very eye catching "backgrounds" that you can add information or text on. 
+		</div>
+
 	</body>
 </html>
