--- a/Media15000/index.html
+++ b/Media15000/index.html
@@ -57,7 +57,7 @@
 			<h3>Junior year small brain computer science guy doing code because why not.</h3>
 			<div>Help, my french fries are getting cold in class and I cant eat them. Press F to pay respects.</div> 
 			<p>If you actually didnt try pressing the F key, here is a link to it instead. 
-				<a href="index2.html">Link me to the game</a>
+				<a href="game.html">Link me to the game</a>
 			</p>
 			<img id="gif" src="images/gifPicture.gif" />
 		</div>		
