--- a/Media15000/htmlFiles/game.html
+++ b/Media15000/htmlFiles/game.html
@@ -2,15 +2,15 @@
 <html>
 	<title>Horror game</title>
 	<head>
-		<link rel="stylesheet" type="text/css" href="style2.css">
-		<script type="text/javascript" src="./scripts.js"></script>
+		<link rel="stylesheet" type="text/css" href="../stylesheets/style2.css">
+		<script type="text/javascript" src="../scripts/scripts.js"></script>
 		<script>
 			document.onmousemove = readMouseMove;
 			window.onkeydown = function(e){
 				//alert(String.fromCharCode(e.keyCode)+" --> "+e.keyCode);
 				//if(e.keyCode == 70){}
 				if(String.fromCharCode(e.keyCode) == "F"){
-					window.open("index.html");
+					window.open("../index.html");
 				}
 			}
 		</script>
@@ -18,9 +18,9 @@
 	</head>
 
 	<body onload="playMusic('music')">
-		<img id="background" src="images/game images/room1.gif" />
+		<img id="background" src="../images/game images/room1.gif" />
 		
-		<audio id = "music" src="sounds/backgroundMusic2.wav" controls></audio>
+		<audio id = "music" src="../sounds/backgroundMusic2.wav" controls></audio>
 		
 		<div id="buttons">
 			<button id="room1" onclick="changeRoom('background', 'room1', '.gif')">room1</button>
@@ -31,6 +31,6 @@
 		<div id="x_result">x value: 0</div>
 		<div id="y_result">y value: 0</div>
 		
-		<a id = "backToHome" href="index.html">Go back</a>
+		<a id = "backToHome" href="../index.html">Go back</a>
 	</body>
 </html>
