--- a/Media15000/htmlFiles/hw2.html
+++ b/Media15000/htmlFiles/hw2.html
@@ -8,15 +8,15 @@
 		<meta name="description" lang="en" content="WRITE A DESCRIPTION" />
 		<meta name="keywords" content="DEFINE KEYWORDS OR PHRASES, USE COMMAS TO SEPERATE" />
 
-		<link rel="stylesheet" type="text/css" href="./style3.css">
-		<script type="text/javascript" src="./scripts.js"></script>
+		<link rel="stylesheet" type="text/css" href="../stylesheets/style3.css">
+		<script type="text/javascript" src="../scripts/scripts.js"></script>
 
 		<script>
 			window.onkeydown = function(e){
 				//alert(String.fromCharCode(e.keyCode)+" --> "+e.keyCode);
 				//if(e.keyCode == 70){}
 				if(String.fromCharCode(e.keyCode) == "F"){
-					window.open("game.html");
+					window.open("./game.html");
 				}
 			}
 		</script>
@@ -24,11 +24,11 @@
 
 	<body onload="playMusic('music')">
 		<ul class="navigationBar">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="game.html">Homework 1</a></li>
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="./game.html">Homework 1</a></li>
 
 			<li class="dropdown">
-				<a href="hw2.html" class="dropHover">Homework 2</a>
+				<a href="./hw2.html" class="dropHover">Homework 2</a>
 				<div class="dropdownContent">
 					<a href="hw2s1">Pic 1 Small</a>
 					<a href="hw2m">Pic 1 Medium</a>
@@ -39,14 +39,14 @@
 				</div>
 			</li>
 			
-			<li><a href="hw3.html">Homework 3</a></li>
-			<li><a href="hw4.html">Homework 4</a></li>
-			<li><a href="hw5.html">Homework 5</a></li>
-			<li><a href="hw6.html">Homework 6</a></li>
-			<li><a href="hw7.html">Homework 7</a></li>
-			<li><a href="hw8.html">Homework 8</a></li>
-			<li><a href="hw9.html">Homework 9</a></li>
-			<li><a href="hw10.html">Homework 10</a></li>
+			<li><a href="./hw3.html">Homework 3</a></li>
+			<li><a href="./hw4.html">Homework 4</a></li>
+			<li><a href="./hw5.html">Homework 5</a></li>
+			<li><a href="./hw6.html">Homework 6</a></li>
+			<li><a href="./hw7.html">Homework 7</a></li>
+			<li><a href="./hw8.html">Homework 8</a></li>
+			<li><a href="./hw9.html">Homework 9</a></li>
+			<li><a href="./hw10.html">Homework 10</a></li>
 		</ul>
 
 		<audio id="music" src="sounds/backgroundMusic.mp3" controls></audio>
@@ -56,8 +56,8 @@
 			<!-- <img id="gif" src="images/gifPicture.gif" /> -->
 
 			<h2 id = "pictureText">These images are 1920px by 1080px at 300ppi </h2>
-			<img id = "pic" src="images/hw2 images/hw2large.png" onclick="changePicture('pic','images/hw2 images/', 'hw2medium', '.png', 'pictureText', 'These images are 800px by 800px.')">
-			<img id = "pic2" src="images/hw2 images/hw2large2.png" onclick="changePicture('pic2','images/hw2 images/', 'hw2medium2', '.png', 'pictureText','These images are 800px by 800px.')">
+			<img id = "pic" src="../images/hw2 images/hw2large.png" onclick="changePicture('pic','../images/hw2 images/', 'hw2medium', '.png', 'pictureText', 'These images are 800px by 800px.')">
+			<img id = "pic2" src="../images/hw2 images/hw2large2.png" onclick="changePicture('pic2','../images/hw2 images/', 'hw2medium2', '.png', 'pictureText','These images are 800px by 800px.')">
 			<h2>Difference between clarity, vibrance, saturation sliders in Adobe Camera Raw, and how shadows/blacks sliders function.</h2>
 		</div>		
 	</body>
