--- a/Media15000/index.html
+++ b/Media15000/index.html
@@ -8,15 +8,15 @@
 		<meta name="description" lang="en" content="WRITE A DESCRIPTION" />
 		<meta name="keywords" content="DEFINE KEYWORDS OR PHRASES, USE COMMAS TO SEPERATE" />
 
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<script type="text/javascript" src="./scripts.js"></script>
+		<link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
+		<script type="text/javascript" src="scripts/scripts.js"></script>
 
 		<script>
 			window.onkeydown = function(e){
 				//alert(String.fromCharCode(e.keyCode)+" --> "+e.keyCode);
 				//if(e.keyCode == 70){}
 				if(String.fromCharCode(e.keyCode) == "F"){
-					window.open("game.html");
+					window.open("./htmlFiles/game.html");
 				}
 			}
 		</script>
@@ -25,10 +25,10 @@
 	<body onload="playMusic('music')">
 		<ul class="navigationBar">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="game.html">Homework 1</a></li>
+			<li><a href="htmlFiles/game.html">Homework 1</a></li>
 
 			<li class="dropdown">
-				<a href="hw2.html" class="dropHover">Homework 2</a>
+				<a href="htmlFiles/hw2.html" class="dropHover">Homework 2</a>
 				<div class="dropdownContent">
 					<a href="hw2s1">Pic 1 Small</a>
 					<a href="hw2m">Pic 1 Medium</a>
@@ -39,14 +39,14 @@
 				</div>
 			</li>
 			
-			<li><a href="hw3.html">Homework 3</a></li>
-			<li><a href="hw4.html">Homework 4</a></li>
-			<li><a href="hw5.html">Homework 5</a></li>
-			<li><a href="hw6.html">Homework 6</a></li>
-			<li><a href="hw7.html">Homework 7</a></li>
-			<li><a href="hw8.html">Homework 8</a></li>
-			<li><a href="hw9.html">Homework 9</a></li>
-			<li><a href="hw10.html">Homework 10</a></li>
+			<li><a href="htmlFiles/hw3.html">Homework 3</a></li>
+			<li><a href="htmlFiles/hw4.html">Homework 4</a></li>
+			<li><a href="htmlFiles/hw5.html">Homework 5</a></li>
+			<li><a href="htmlFiles/hw6.html">Homework 6</a></li>
+			<li><a href="htmlFiles/hw7.html">Homework 7</a></li>
+			<li><a href="htmlFiles/hw8.html">Homework 8</a></li>
+			<li><a href="htmlFiles/hw9.html">Homework 9</a></li>
+			<li><a href="htmlFiles/hw10.html">Homework 10</a></li>
 		</ul>
 
 		<audio id="music" src="sounds/backgroundMusic.mp3" controls></audio>
@@ -57,7 +57,7 @@
 			<h3>Junior year small brain computer science guy doing code because why not.</h3>
 			<div>Help, my french fries are getting cold in class and I cant eat them. Press F to pay respects.</div> 
 			<p>If you actually didnt try pressing the F key, here is a link to it instead. 
-				<a href="game.html">Link me to the game</a>
+				<a href="htmlFiles/game.html">Link me to the game</a>
 			</p>
 			<img id="gif" src="images/gifPicture.gif" />
 		</div>		
