--- a/Media15000/htmlFiles/PlayTwoPlayers.html
+++ b/Media15000/htmlFiles/PlayTwoPlayers.html
@@ -46,12 +46,11 @@
 		<audio id="music" src="../sounds/Final Project Music.mp3" controls></audio>
 	
 		<div class="text">
-			<img id = "pic" src="../images/hw10 videos/1-StartUp.png" usemap="#image-map">
+			<img id = "pic" src="../images/hw10 videos/2-NotAScrub.png" usemap="#image-map">
 			
 			<map name="image-map">
-				<area href="admireBox.html" coords="511,383,655,520" shape="rect">
-				<area href="PlayTwoPlayers.html" coords="973,521,689,422" shape="rect">
-				<area href="Speedrun.html" coords="1044,402,1245,525" shape="rect">
+				<area href="Cliff.html" coords="900,600,1170,728" shape="rect">
+				<area href="Jesus1.html" coords="1180,443,1300,563" shape="rect">
 			</map>
 			
 			<!--<img id = "pic2" src="../images/hw10 videos/1-StartUp.png" usemap = "#image-map">
