--- a/Media15000/htmlFiles/Stay.html
+++ b/Media15000/htmlFiles/Stay.html
@@ -46,12 +46,10 @@
 		<audio id="music" src="../sounds/Final Project Music.mp3" controls></audio>
 	
 		<div class="text">
-			<img id = "pic" src="../images/hw10 videos/1-StartUp.png" usemap="#image-map">
+			<img id = "pic" src="../images/hw10 videos/GoodEnd.png" usemap="#image-map">
 			
 			<map name="image-map">
-				<area href="admireBox.html" coords="511,383,655,520" shape="rect">
-				<area href="PlayTwoPlayers.html" coords="973,521,689,422" shape="rect">
-				<area href="Speedrun.html" coords="1044,402,1245,525" shape="rect">
+				<area href="hw10.html" coords="617,652,976,725" shape="rect">
 			</map>
 			
 			<!--<img id = "pic2" src="../images/hw10 videos/1-StartUp.png" usemap = "#image-map">
